--- a/package.json
+++ b/package.json
@@ -10,22 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@google-cloud/text-to-speech": "^5.2.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
+    "@vitalets/google-translate-api": "^9.2.0",
     "axios": "^1.6.8",
     "i18next": "^23.11.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-i18next": "^14.1.0",
     "react-native": "0.73.6",
+    "react-native-actions-sheet": "^0.9.3",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "^15.1.0",
+    "react-native-tts": "^4.1.0",
     "react-redux": "^9.1.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0"
