--- a/ios/AppTranslate.xcodeproj/xcshareddata/xcschemes/MyBaseProject.xcscheme
+++ b/ios/AppTranslate.xcodeproj/xcshareddata/xcschemes/MyBaseProject.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "MyBaseProject.app"
-               BlueprintName = "MyBaseProject"
-               ReferencedContainer = "container:MyBaseProject.xcodeproj">
+               BuildableName = "AppTranslate.app"
+               BlueprintName = "AppTranslate"
+               ReferencedContainer = "container:AppTranslate.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "MyBaseProjectTests.xctest"
                BlueprintName = "MyBaseProjectTests"
-               ReferencedContainer = "container:MyBaseProject.xcodeproj">
+               ReferencedContainer = "container:AppTranslate.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MyBaseProject.app"
-            BlueprintName = "MyBaseProject"
-            ReferencedContainer = "container:MyBaseProject.xcodeproj">
+            BuildableName = "AppTranslate.app"
+            BlueprintName = "AppTranslate"
+            ReferencedContainer = "container:AppTranslate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MyBaseProject.app"
-            BlueprintName = "MyBaseProject"
-            ReferencedContainer = "container:MyBaseProject.xcodeproj">
+            BuildableName = "AppTranslate.app"
+            BlueprintName = "AppTranslate"
+            ReferencedContainer = "container:AppTranslate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
