--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "MyBaseProject",
+  "name": "AppTranslate",
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "build-android": "react-native run-android --mode release",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -13,6 +14,7 @@
     "@google-cloud/text-to-speech": "^5.2.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-clipboard/clipboard": "^1.14.1",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
