--- a/ios/AppTranslate/Info.plist
+++ b/ios/AppTranslate/Info.plist
@@ -24,6 +24,8 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Your app needs access to the camera</string>
 	<key>NSMicrophoneUsageDescription</key>
   <string>Description of why you require the use of the microphone</string>
   <key>NSSpeechRecognitionUsageDescription</key>
