--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@devinikhiya/react-native-tesseractocr": "^0.1.10",
     "@google-cloud/text-to-speech": "^5.2.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-clipboard/clipboard": "^1.14.1",
@@ -28,6 +29,7 @@
     "react-native": "0.73.6",
     "react-native-actions-sheet": "^0.9.3",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
